1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* configure.in: Check for sys/sigevent.h.

1999-05-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ltconfig: For HPUX, scan for constructors and pass them as
	+I symbol pairs via the -c option of ld.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ltconfig (deplibs_check_method): Set as pass_all for HPUX.

1999-05-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VERSION: Bump.

1999-05-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* NEWS: Note serialization support for Discrete2d.

	* configure.in: Make an (explicit) call to AC_CANONICAL_SYSTEM.
	Call md_CHECK_PATH_SYNTAX.
	Get absolute path of $srcdir and use that for running libobjc's
	configure (for the case srcdir=.).

1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* NEWS: Note addition of setColors:count: in EZGraph and EZBin.

	* VERSION: Bump.
	
1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acconfig.h: Add INT64 and JNI_H_NEEDS_INT64.

	* configure.in: Call md_CHECK_JNI_H.

1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acconfig.h: Add HAVE_X11_XPM_H and HAVE_XPM_H.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* configure.in: Call md_CHECK_SIZES.

	* acconfig.h: Add PTRINT, PTRINTFMT, PTRUINT, and PTRUINTFMT.

	* config.guess, config.sub, ltconfig, ltmain.sh.  New libtool.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* configure.in: Pass --enable-shared=$enable_shared on to libobjc.

	* configure.in: Use md_STRUCT_XPM_ALLOCPIXELS.

	* acconfig.h (HAVE_XPM_ALLOCPIXELS): New symbol.

1999-04-26  Alex Lancaster  <alex@santafe.edu>

	* NEWS: Note handling of Lisp comments by InputStream.

1999-04-25  Alex Lancaster  <alex@santafe.edu>

	* configure.in (AC_OUTPUT): Extract tests/space/Makefile.

1999-04-25  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* configure.in (enable_jar): New test.
	(JAVA_CLASSES_INSTALLED_AS): Set per above.
