@@ -1268,10 +1268,8 @@ else
 
   hpux9* | hpux10* | hpux11*)
     case "$host_os" in
-    hpux9*) archive_cmds='$rm $objdir/$soname~$LD -b +b $install_libdir -o $objdir/$soname $libobjs $deplibs $linkopts~test $objdir/$soname = $lib || mv $objdir/$soname $lib' ;;
-    *) archive_cmds='nm $libobjs | sed -n "s/\([0-9a-f][0-9a-f]*\) \([^ ][^ ]*\) \(_GLOBAL_\$I\$.*\)/+I \3/p" > /tmp/ldcmds_$soname$$ ;$LD -b +h $soname +b $install_libdir -o $lib -c /tmp/ldcmds_$soname$$ $libobjs $deplibs $linkopts~#rm /tmp/ldcmds_$soname$$' ;;
-
-
+    hpux9*) archive_cmds='$rm $objdir/$soname~ctorname=`echo "${soname}_constructor" | sed "s/\./_/g"`; nm $libobjs | nl -s" " | sed -n "s/^ *\([0-9][0-9]*\)  *\([0-9a-f][0-9a-f]*\) \([^ ][^ ]*\) \(_GLOBAL_\$I\$.*\)/extern void \${ctorname}_sym\1 (void) __asm__ (\"\4\");/p" > \${ctorname}.c ; echo >> \${ctorname}.c ; echo "void \${ctorname} (void) {" >> \${ctorname}.c ; nm $libobjs | nl -s" " | sed -n "s/^ *\([0-9][0-9]*\)  *\([0-9a-f][0-9a-f]*\) \([^ ][^ ]*\) \(_GLOBAL_\$I\$.*\)/\${ctorname}_sym\1 ();/p" >> \${ctorname}.c ; echo "}" >> \${ctorname}.c ; $CC -fPIC -c \${ctorname}.c ; $LD -b +b $install_libdir +I \${ctorname} -o $objdir/$soname \${ctorname}.o $libobjs $deplibs $linkopts~test $objdir/$soname = $lib || mv $objdir/$soname $lib' ;;
+    *) archive_cmds='nm $libobjs | sed -n "s/\([0-9a-f][0-9a-f]*\) \([^ ][^ ]*\) \(_GLOBAL_\$I\$.*\)/+I \3/p" > /tmp/ldcmds_$soname$$ ;$LD -b +h $soname +b $install_libdir -o $lib -c /tmp/ldcmds_$soname$$ $libobjs $deplibs $linkopts~rm /tmp/ldcmds_$soname$$' ;;
     esac
     hardcode_libdir_flag_spec='${wl}+b ${wl}$libdir'
     hardcode_libdir_separator=:
